# api-server/api/v1/build_task/build_task_grpc.pb.go
@@ -22,6 +22,7 @@ const _ = grpc.SupportPackageIsVersion9
 
 const (
 	BuildTaskService_Create_FullMethodName = "/api.v1.build.task.BuildTaskService/Create"
+	BuildTaskService_List_FullMethodName   = "/api.v1.build.task.BuildTaskService/List"
 )
 
 // BuildTaskServiceClient is the client API for BuildTaskService service.
@@ -29,6 +30,7 @@ const (
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type BuildTaskServiceClient interface {
 	Create(ctx context.Context, in *application.IdentityRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	List(ctx context.Context, in *application.IdentityRequest, opts ...grpc.CallOption) (*ListBuildTaskResponse, error)
 }
 
 type buildTaskServiceClient struct {
@@ -49,11 +51,22 @@ func (c *buildTaskServiceClient) Create(ctx context.Context, in *application.Ide
 	return out, nil
 }
 
+func (c *buildTaskServiceClient) List(ctx context.Context, in *application.IdentityRequest, opts ...grpc.CallOption) (*ListBuildTaskResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListBuildTaskResponse)
+	err := c.cc.Invoke(ctx, BuildTaskService_List_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // BuildTaskServiceServer is the server API for BuildTaskService service.
 // All implementations must embed UnimplementedBuildTaskServiceServer
 // for forward compatibility.
 type BuildTaskServiceServer interface {
 	Create(context.Context, *application.IdentityRequest) (*emptypb.Empty, error)
+	List(context.Context, *application.IdentityRequest) (*ListBuildTaskResponse, error)
 	mustEmbedUnimplementedBuildTaskServiceServer()
 }
 
@@ -66,6 +79,9 @@ type UnimplementedBuildTaskServiceServer struct{}
 
 func (UnimplementedBuildTaskServiceServer) Create(context.Context, *application.IdentityRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Create not implemented")
+}
+func (UnimplementedBuildTaskServiceServer) List(context.Context, *application.IdentityRequest) (*ListBuildTaskResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
 }
 func (UnimplementedBuildTaskServiceServer) mustEmbedUnimplementedBuildTaskServiceServer() {}
 func (UnimplementedBuildTaskServiceServer) testEmbeddedByValue()                          {}
@@ -106,6 +122,24 @@ func _BuildTaskService_Create_Handler(srv interface{}, ctx context.Context, dec 
 	return interceptor(ctx, in, info, handler)
 }
 
+func _BuildTaskService_List_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(application.IdentityRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BuildTaskServiceServer).List(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BuildTaskService_List_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BuildTaskServiceServer).List(ctx, req.(*application.IdentityRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // BuildTaskService_ServiceDesc is the grpc.ServiceDesc for BuildTaskService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -116,6 +150,10 @@ var BuildTaskService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Create",
 			Handler:    _BuildTaskService_Create_Handler,
+		},
+		{
+			MethodName: "List",
+			Handler:    _BuildTaskService_List_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
